style.css
/* initialize basic resets */
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*:focus {
  outline: none;
  background: none;
}

body{
  font-family: 'Nunito', sans-serif;
  margin: 0 auto;
}

ul{
  list-style: none;
}

a{
  text-decoration: none;
}

Header{
  background: #fff;
  width: 100%;
  height: 70px;
  position: fixed;
  top: 0;
  z-index: 2;
}

.nav_container{
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin: 0 auto;
  padding-top: 10px;
  padding-left: 20px;
  padding-right: 10px;
}

#nav-bar_logo{
  width: 25px;
}

.nav-link{
  display: inline-block;
  padding: 0 10px;
}

.nav-link>a{
  color: #333;
  font-size: 16px;
  font-family: 'Nunito', sans-serif;
}
.nav-link>a:hover{
  color: rgb(219, 60, 148);
}

/* Hero Section*/

.hero{
  height: 80vh;
  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2017/08/01/13/36/computer-2565478_960_720.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  text-align: center;
  color: #fff;
}

.hero_text{
 padding-top: 200px;
 font-size: 2rem;
 font-weight: 900;
}
.lead{
  width: 80%;
  margin: 0 auto;
  padding: 10px;
}

.search{
  background: #e1e1e1;
  width: 90%;
  margin: 0 auto;
  border-radius: 50px;
  margin-top: 20px;
}

#search_box{
  height: 50px;
  width: 80%;
  background: none;
  border: none;
}

.search::placeholder{
  color: rgba(51, 51, 51, 0.5);
  font-size: 1rem;
}

.search_button{
  background: none;
  border: none;
  color: #333;
  padding-top: 15px;
}


/* Video Section */

.video{
  background: #f1f1f1;
  text-align: center;
  padding: 30px;
}

.myVideo{
  width: 80%;
  border: none;
}

/* Card section */

.jumbotron{
  display: flex;
  flex-direction: column;
  padding: 20px;
}

.card{
  width: 90%;
  background: #fff;
  color: rgb(44, 30, 4);
  margin: 0 auto;
  margin-bottom: 20px;
  border-radius: 5px;
  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
  cursor: pointer;
}

.card:hover{
  transform: translateY(5);
  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
}

.card-img{
  height: 150px;
  width: 100%;
  border-radius: 5px 5px 0 0;
}

.card_text{
  padding: 10px;
  font-size: 18px;
}

.card_description{
  padding: 0 0 10px 10px;
}

.btn_outline{
  margin: 10px;
  padding: 10px 20px;
  background: rgb(2, 52, 219);
  border: none;
  border-radius: 50px;
  color: #fff;
  cursor: pointer;
}

/* form Section*/

.forms{
  background: #333;
  text-align: center;
  height: 50vh;
  padding-top: 80px;
}

.forms h3 {
  font-size: 24px;
  color: #f1f1f1;
  padding-bottom: 10px;
}

.forms h6{
  font-size: 14px;
  color: #fff;
  padding-bottom: 10px;
  font-weight: 100;
}

.rowTab{
display: flex;
justify-content: center;
align-items: flex-end;
margin-bottom: 20px;
}

.labels{
  font-size: 1rem;
  padding-right: 5px;
  color: white;
}

#email{
  height: 40px;
  padding: 0 10px;
  background: none;
  border: none;
  border-bottom: 1px solid #f1f1f1;
  width: 300px;
}

#submit{
height: 40px;
width: 200px;;
padding: 10px;
border-radius: 50px;
border: none;
background: #fff;
color: rgb(2, 52, 219);
font-weight: 600;
}

/* Footer*/
.container_footer{
  display: flex;
  margin: 20px;
}

.footer_heading{
  font-size: 16px;
  padding-bottom: 10px;
  color: #333;
}

.quick_links{
  margin-right: 50px;
}

.footer_header>ul>li>a{
  color: #333;
  font-size: 14px;
}

.footer_header>ul>li>a:hover{
  color: rgb(219, 60, 148);
}

.copy{
  background: #333;
  color: #fff;
  font-size: 12px;
  padding: 10px;
  text-align: center;
  position: absolute;
  left: 0;
  width: 100%;
}


@media screen and (min-width:768px) {
  .nav_container{
    width: 80%;
    margin: 0 auto;
    padding-top: 20px;
  }

  .search{
    width: 50%;
  }

  .myVideo{
    width: 50%;
    border: none;
  }

  .jumbotron{
    display: flex;
    flex-direction: row;
    padding: 20px;
    width: 80%;
    margin: 0 auto;
  }

  .card{
    margin: 10px;
  }

  .container_footer{
    width: 80%;
    margin: 0 auto;
    padding-top: 20px;
    padding-bottom: 20px;
  }

  .quick_links{
    margin-right: 200px;
  }
  
}

